--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Seguros Smith | Cotizá tu seguro online fácil</title>
   <link rel="shortcut icon" href="media/img/SS_handshake.ico" type="image/x-icon">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link rel="stylesheet" href="style.css">
@@ -18,105 +19,29 @@
     <div class="bg-dark">
       <div class="container">
         <nav class="navbar navbar-expand-md navbar-dark justify-content-center">
-          <a class="navbar-brand d-flex justify-content-center" href="#">
+          <a class="navbar-brand d-flex justify-content-center" href="index.html">
             <img src="media/img/Logo Seguros Smith.png" alt="Seguros Smith Logo" class="img-fluid w-75">
           </a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+            aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-            <ul class="navbar-nav gap-3 align-items-center">
-              <li class="nav-item">
-                <a href="#" class="nav-link text-white headerElem">
-                  <svg width="24" height="24" stroke-width="1.5" viewBox="0 0 24 24" fill="none"
-                    xmlns="http://www.w3.org/2000/svg">
-                    <path d="M3 9.5L12 4L21 9.5" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" />
-                    <path d="M19 13V19.4C19 19.7314 18.7314 20 18.4 20H5.6C5.26863 20 5 19.7314 5 19.4V13"
-                      stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" />
-                  </svg>
-                  Inicio
-                </a>
-              </li>
-              <li class="nav-item">
-                <a href="#" class="nav-link text-white headerElem">
-                  <svg width="23" height="23" stroke-width="1.5" viewBox="0 0 24 24" fill="none"
-                    xmlns="http://www.w3.org/2000/svg">
-                    <path
-                      d="M1 21V3C1 1.89543 1.89543 1 3 1H21C22.1046 1 23 1.89543 23 3V21C23 22.1046 22.1046 23 21 23H3C1.89543 23 1 22.1046 1 21Z"
-                      stroke="currentColor" stroke-width="1.5" />
-                    <path d="M15 7L17 7H19" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" />
-                    <path d="M15 15.5H17L19 15.5" stroke="currentColor" stroke-linecap="round"
-                      stroke-linejoin="round" />
-                    <path d="M15 18.5H17H19" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" />
-                    <path d="M5 7H7M9 7H7M7 7V5M7 7V9" stroke="currentColor" stroke-linecap="round"
-                      stroke-linejoin="round" />
-                    <path
-                      d="M5.58609 18.4142L7.0003 17M8.41452 15.5858L7.0003 17M7.0003 17L5.58609 15.5858M7.0003 17L8.41452 18.4142"
-                      stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" />
-                  </svg>
-                  Cotizador
-                </a>
-              </li>
-              <li class="nav-item">
-                <a href="#" class="nav-link text-white headerElem">
-                  <svg width="24" height="24" stroke-width="1.5" viewBox="0 0 24 24" fill="none"
-                    xmlns="http://www.w3.org/2000/svg">
-                    <path
-                      d="M16.1538 7.15382C15.2054 6.20538 13.5351 5.54568 12 5.50437M7.84619 16.1538C8.73855 17.3436 10.3977 18.0222 12 18.0798M12 5.50437C10.1735 5.45522 8.5385 6.2815 8.5385 8.53845C8.5385 12.6923 16.1538 10.6154 16.1538 14.7692C16.1538 17.1383 14.127 18.1562 12 18.0798M12 5.50437V3M12 18.0798V20.9999"
-                      stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" />
-                  </svg>
-                  Precios
-                </a>
-              </li>
-              <li class="nav-item">
-                <a href="#" class="nav-link text-white headerElem">
-                  <svg width="24" height="24" stroke-width="1.5" viewBox="0 0 24 24" fill="none"
-                    xmlns="http://www.w3.org/2000/svg">
-                    <path
-                      d="M12 22C17.5228 22 22 17.5228 22 12C22 6.47715 17.5228 2 12 2C6.47715 2 2 6.47715 2 12C2 17.5228 6.47715 22 12 22Z"
-                      stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" />
-                    <path d="M9 9C9 5.49997 14.5 5.5 14.5 9C14.5 11.5 12 10.9999 12 13.9999" stroke="currentColor"
-                      stroke-linecap="round" stroke-linejoin="round" />
-                    <path d="M12 18.01L12.01 17.9989" stroke="currentColor" stroke-linecap="round"
-                      stroke-linejoin="round" />
-                  </svg>
-                  FAQ
-                </a>
-              </li>
-              <li class="nav-item">
-                <a href="#" class="nav-link text-white headerElem">
-                  <svg width="24" height="24" stroke-width="1.5" viewBox="0 0 24 24" fill="none"
-                    xmlns="http://www.w3.org/2000/svg">
-                    <path d="M1 20V19C1 15.134 4.13401 12 8 12V12C11.866 12 15 15.134 15 19V20" stroke="currentColor"
-                      stroke-linecap="round" />
-                    <path d="M13 14V14C13 11.2386 15.2386 9 18 9V9C20.7614 9 23 11.2386 23 14V14.5"
-                      stroke="currentColor" stroke-linecap="round" />
-                    <path
-                      d="M8 12C10.2091 12 12 10.2091 12 8C12 5.79086 10.2091 4 8 4C5.79086 4 4 5.79086 4 8C4 10.2091 5.79086 12 8 12Z"
-                      stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" />
-                    <path
-                      d="M18 9C19.6569 9 21 7.65685 21 6C21 4.34315 19.6569 3 18 3C16.3431 3 15 4.34315 15 6C15 7.65685 16.3431 9 18 9Z"
-                      stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" />
-                  </svg>
-                  Contacto
-                </a>
-              </li>
-            </ul>
+            <div class="navbar-nav gap-3 align-items-center">
+              <a href="#" class="nav-link text-white headerElem"><i class="bi bi-house-door-fill fs-4"></i>Inicio</a>
+              <a href="#" class="nav-link text-white headerElem"><i class="bi bi-calculator-fill fs-4"></i>Cotizador</a>
+              <a href="#" class="nav-link text-white headerElem"><i class="bi bi-currency-dollar fs-4"></i>Precios</a>
+              <a href="#" class="nav-link text-white headerElem"><i class="bi bi-question-circle fs-4"></i>FAQ</a>
+              <a href="#" class="nav-link text-white headerElem"><i class="bi bi-people-fill fs-4"></i>Contacto</a>
+            </div>
           </div>
         </nav>
       </div>
     </div>
   </header>
   <main>
-    <section class="container">
+    <section class="container my-5">
       <div class="row">
-        <!-- <h1 class="h4">Seguros para Bicicletas y Monopatines</h1>
-          <h2 class="h1">Contratá el seguro ideal para vos</h2>
-          <p class="h2">Te asesoramos y armamos tu seguro a medida, según tu presupuesto y necesidades.</p>
-          <a href="" title="Cotizar Seguro" class="" id="">
-            <button class="btn btn-primary btn-lg">Cotizar Seguro</button>
-          </a> -->
         <div class="text-center col-sm-12 col-md-12 col-lg-6">
           <h1 class="display-5 fw-bold lh-1 mb-3">Seguros para Bicicletas y Monopatines</h1>
           <h2>Contratá el seguro ideal para vos</h2>
@@ -127,34 +52,33 @@
             </a>
           </div>
         </div>
-        <div class="col-sm-12 col-md-12 col-lg-6 col-10">
-          <div id="carouselExampleIndicators" class="carousel carousel-dark slide" data-bs-ride="carousel">
+        <div class="col-sm-12 col-md-12 col-lg-6">
+          <div id="clientCarousel" class="carousel carousel-light slide" data-bs-ride="carousel">
             <div class="carousel-indicators">
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
-                aria-current="true" aria-label="Slide 1"></button>
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
-                aria-label="Slide 2"></button>
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
-                aria-label="Slide 3"></button>
+              <button type="button" data-bs-target="#clientCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#clientCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
+              <button type="button" data-bs-target="#clientCarousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
+              <button type="button" data-bs-target="#clientCarousel" data-bs-slide-to="3" aria-label="Slide 4"></button>
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="https://img.freepik.com/free-photo/happy-family-is-riding-bikes-outdoors-smiling-mom-bike-son-balancebike_247622-10816.jpg" class="d-block w-100" alt="...">
+                <img src="media/img/bike-family-1.jpg" class="d-block w-100" alt="Imagen de stock">
               </div>
               <div class="carousel-item">
-                <img src="https://img.freepik.com/free-photo/happy-family-is-riding-bikes-outdoors-smiling-mom-bike-son-balancebike_247622-10816.jpg" class="d-block w-100" alt="...">
+                <img src="media/img/bike-family-2.jpg" class="d-block w-100" alt="Imagen de stock">
               </div>
               <div class="carousel-item">
-                <img src="https://img.freepik.com/free-photo/happy-family-is-riding-bikes-outdoors-smiling-mom-bike-son-balancebike_247622-10816.jpg" class="d-block w-100" alt="...">
+                <img src="media/img/scooter-family.jpg" class="d-block w-100" alt="Imagen de stock">
+              </div>
+              <div class="carousel-item">
+                <img src="media/img/scooter.jpg" class="d-block w-100" alt="Imagen de stock">
               </div>
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
-              data-bs-slide="prev">
+            <button class="carousel-control-prev" type="button" data-bs-target="#clientCarousel" data-bs-slide="prev">
               <span class="carousel-control-prev-icon" aria-hidden="true"></span>
               <span class="visually-hidden">Previous</span>
             </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
-              data-bs-slide="next">
+            <button class="carousel-control-next" type="button" data-bs-target="#clientCarousel" data-bs-slide="next">
               <span class="carousel-control-next-icon" aria-hidden="true"></span>
               <span class="visually-hidden">Next</span>
             </button>
@@ -164,12 +88,19 @@
     </section>
   </main>
   <footer>
+    <p class="copyright">Smith © 2022 Todos los derechos reservados.</p>
 
+    <a href="index.html"><img src="media/img/SS_handshake.ico" class="w-25" alt="Logo de Seguros Smith"></a>
+
+    <div class="nav rrss">
+      <a href="https://github.com/GustavoSmith" class="nav-link px-2"><i class="bi bi-github fs-4 text-light" role="img" aria-label="GitHub"></i></a>
+      <a href="https://www.instagram.com/gusmith21" class="nav-link px-2"><i class="bi bi-instagram fs-4 text-light" role="img" aria-label="Instagram"></i></a>
+      <a href="https://www.linkedin.com/in/gustavobsmith" class="nav-link px-2"><i class="bi bi-linkedin fs-4 text-light" role="img" aria-label="LinkedIn"></i></a>
+    </div>
   </footer>
-  <script src="main.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
     crossorigin="anonymous"></script>
+  <script src="main.js"></script>
 </body>
 
 </html>
