--- a/index.html
+++ b/index.html
@@ -30,9 +30,7 @@
             <div class="navbar-nav gap-3 align-items-center">
               <a href="#" class="nav-link text-white headerElem"><i class="bi bi-house-door-fill fs-4"></i>Inicio</a>
               <a href="#cotizador" class="nav-link text-white headerElem"><i class="bi bi-calculator-fill fs-4"></i>Cotizador</a>
-              <a href="#precios" class="nav-link text-white headerElem"><i class="bi bi-currency-dollar fs-4"></i>Precios</a>
               <a href="#faq" class="nav-link text-white headerElem"><i class="bi bi-question-circle fs-4"></i>FAQ</a>
-              <a href="#contacto" class="nav-link text-white headerElem"><i class="bi bi-people-fill fs-4"></i>Contacto</a>
             </div>
           </div>
         </nav>
@@ -40,7 +38,7 @@
     </div>
   </header>
   <main>
-    <section class="container my-5" id="inicio">
+    <section class="container" id="inicio">
       <div class="row">
         <div class="text-center col-sm-12 col-md-12 col-lg-6">
           <h1 class="display-5 fw-bold lh-1 mb-3">Seguros para Bicicletas y Monopatines</h1>
@@ -58,7 +56,6 @@
               <button type="button" data-bs-target="#clientCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
               <button type="button" data-bs-target="#clientCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
               <button type="button" data-bs-target="#clientCarousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
-              <!-- <button type="button" data-bs-target="#clientCarousel" data-bs-slide-to="3" aria-label="Slide 4"></button> -->
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active">
@@ -70,9 +67,6 @@
               <div class="carousel-item">
                 <img src="media/img/scooter.jpg" class="d-block w-100" alt="Imagen de stock">
               </div>
-              <!-- <div class="carousel-item">
-                <img src="media/img/bike-family-2.jpg" class="d-block w-100" alt="Imagen de stock">
-              </div> -->
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#clientCarousel" data-bs-slide="prev">
               <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -117,11 +111,33 @@
         </div>
       </div>
     </section>
-    <!--
-      <section id="precios">Precios</section>
-      <section id="faq">FAQ</section>
-      <section id="contacto">Contacto</section>
-    -->
+    <!-- <section id="faq">FAQ</section>
+    <section id="info" class="px-5">
+      <h2 class="hero">¿Por qué Seguros Smith?</h2>
+      <div class="container">
+        <div class="row g-3 align-items-end">
+          <div class="col col-12 col-lg-4">
+            <img src="media/img/young-man-riding-electric-scooter-isolated-flat-vector-illustration-cartoon-hipster-riding-along-sidewalk-city-park_74855-8728.webp"
+              class="img-fluid">
+            <h4></h4>
+            <p class="mt-4">Lorem ipsum dolor sit amet</p>
+            <a class="mb-5" href="">Ver mas</a>
+          </div>
+          <div class="col col-12 col-lg-4">
+            <img src="media/img/young-man-riding-electric-scooter-isolated-flat-vector-illustration-cartoon-hipster-riding-along-sidewalk-city-park_74855-8728.webp"
+              class="img-fluid">
+            <p class="mt-4">Lorem ipsum dolor sit amet</p>
+            <a href="" class="mb-5">Ver mas</a>
+          </div>
+          <div class="col col-12 col-lg-4">
+            <img src="media/img/young-man-riding-electric-scooter-isolated-flat-vector-illustration-cartoon-hipster-riding-along-sidewalk-city-park_74855-8728.webp"
+              class="img-fluid">
+            <p class="mt-4">Lorem ipsum dolor sit amet</p>
+            <a href="" class="mb-5">Ver mas</a>
+          </div>
+        </div>
+      </div>
+    </section> -->
   </main>
   <footer>
     <p class="copyright">Smith © 2022 Todos los derechos reservados.</p>
@@ -137,6 +153,8 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
     crossorigin="anonymous"></script>
   <script src="https://unpkg.com/just-validate@latest/dist/just-validate.production.min.js"></script>
+  <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
   <script src="main.js"></script>
 </body>
 
