--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
                 <img src="media/img/bike-family-1.jpg" class="d-block w-100" alt="Imagen de stock">
               </div>
               <div class="carousel-item">
-                <img src="media/img/scooter-family.jpg" class="d-block w-100" alt="Imagen de stock">
+                <img src="media/img/banner-scooter-family.jpg" class="d-block w-100" alt="Imagen de stock">
               </div>
               <div class="carousel-item">
-                <img src="media/img/scooter.jpg" class="d-block w-100" alt="Imagen de stock">
+                <img src="media/img/banner-scooter.jpg" class="d-block w-100" alt="Imagen de stock">
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#clientCarousel" data-bs-slide="prev">
@@ -82,7 +82,7 @@
     </section>
     <section class="container" id="cotizador">
       <div class="row justify-content-center mb-2">
-        <div class="text-center col-sm-12 col-md-12 col-lg-6">
+        <div class="text-center col-12 col-lg-6">
           <h2>Ingrese sus datos</h2>
           <form id="cotizadorForm" class="row" autocomplete="off">
             <div class="mb-3 col-12">
@@ -93,7 +93,7 @@
               <label for="cotizacionMail" class="form-label visually-hidden">Correo</label>
               <input class="form-control" id="cotizacionMail" type="email" placeholder="Correo electrónico">
             </div>
-            <div class="mb-3 col-6">
+            <div class="mb-3 col-12 col-md-6">
               <label for="cotizacionVehicle" class="form-label visually-hidden">Vehiculo</label>
               <select class="form-select" id="cotizacionVehicle" aria-label="Vehículo">
                 <option selected disabled value="">Seleccione un vehículo</option>
@@ -101,7 +101,7 @@
                 <option value="monopatín">Monopatín</option>
               </select>
             </div>
-            <div class="mb-3 col-6">
+            <div class="mb-3 col-12 col-md-6">
               <label for="cotizacionVehicleYear" class="form-label visually-hidden">Año del vehículo</label>
               <input class="form-control" id="cotizacionVehicleYear" type="number" min="1990" step="1" max="2022" placeholder="Año del vehículo">
             </div>
@@ -111,33 +111,34 @@
         </div>
       </div>
     </section>
-    <!-- <section id="faq">FAQ</section>
+    <section id="faq">FAQ</section>
     <section id="info" class="px-5">
       <h2 class="hero">¿Por qué Seguros Smith?</h2>
-      <div class="container">
-        <div class="row g-3 align-items-end">
+      <div class="container infoContainer py-5">
+        <div class="row g-5 align-items-end">
           <div class="col col-12 col-lg-4">
-            <img src="media/img/young-man-riding-electric-scooter-isolated-flat-vector-illustration-cartoon-hipster-riding-along-sidewalk-city-park_74855-8728.webp"
-              class="img-fluid">
-            <h4></h4>
-            <p class="mt-4">Lorem ipsum dolor sit amet</p>
-            <a class="mb-5" href="">Ver mas</a>
+            <img src="media/img/info-scooter.webp" class="img-fluid" alt="Foto stock de un Scooter">
+            <h4>Es seguro</h4>
+            <p class="mt-2">Utilizamos tecnologías optimizadas para asegurar la mayor encriptación</p>
           </div>
           <div class="col col-12 col-lg-4">
-            <img src="media/img/young-man-riding-electric-scooter-isolated-flat-vector-illustration-cartoon-hipster-riding-along-sidewalk-city-park_74855-8728.webp"
-              class="img-fluid">
-            <p class="mt-4">Lorem ipsum dolor sit amet</p>
-            <a href="" class="mb-5">Ver mas</a>
+            <img src="media/img/info-bikes.png" class="img-fluid" alt="Foto stock de bicicletas">
+            <h4>Sencillo</h4>
+            <p class="mt-2">Cotizar tu préstamo en Seguros Smith lleva solo 2' y es sin cargo</p>
           </div>
           <div class="col col-12 col-lg-4">
-            <img src="media/img/young-man-riding-electric-scooter-isolated-flat-vector-illustration-cartoon-hipster-riding-along-sidewalk-city-park_74855-8728.webp"
-              class="img-fluid">
-            <p class="mt-4">Lorem ipsum dolor sit amet</p>
-            <a href="" class="mb-5">Ver mas</a>
+            <img src="media/img/info-girl-bike.png" class="img-fluid" alt="Foto stock de una chica en bicicleta">
+            <h4>Económico</h4>
+            <p class="mt-2">En Seguros Smith ofrecemos la mayor calidad al precio más conveniente</p>
           </div>
         </div>
+        <div>
+          <a href="#cotizador">
+            <button class="btn btn-primary btn-lg" type="submit">Cotizar seguro ya</button>
+          </a>
+        </div>
       </div>
-    </section> -->
+    </section>
   </main>
   <footer>
     <p class="copyright">Smith © 2022 Todos los derechos reservados.</p>
