Se agregan cambios finales

--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
           </button>
           <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
             <div class="navbar-nav gap-3 align-items-center">
-              <a href="#" class="nav-link text-white headerElem"><i class="bi bi-house-door-fill fs-4"></i>Inicio</a>
-              <a href="#cotizador" class="nav-link text-white headerElem"><i class="bi bi-calculator-fill fs-4"></i>Cotizador</a>
-              <a href="#faq" class="nav-link text-white headerElem"><i class="bi bi-question-circle fs-4"></i>FAQ</a>
+              <a href="#" class="nav-link headerElem"><i class="bi bi-house-door-fill fs-4"></i>Inicio</a>
+              <a href="#cotizador" class="nav-link headerElem"><i class="bi bi-calculator-fill fs-4"></i>Cotizador</a>
+              <a href="#info" class="nav-link headerElem"><i class="bi bi-question-circle fs-4"></i>Más Información</a>
             </div>
           </div>
         </nav>
@@ -44,10 +44,8 @@
           <h1 class="display-5 fw-bold lh-1 mb-3">Seguros para Bicicletas y Monopatines</h1>
           <h2>Contratá el seguro ideal para vos</h2>
           <p class="lead">Te asesoramos y armamos tu seguro a medida, según tu presupuesto y necesidades.</p>
-          <div class="">
-            <a href="#cotizador" title="Cotizar Seguro" class="" id="">
-              <button class="btn btn-primary btn-lg">Cotizar Seguro</button>
-            </a>
+          <div>
+            <a href="#cotizador" title="Cotizar Seguro" class="btn btn-primary btn-lg mb-4">Cotizar Seguro</a>
           </div>
         </div>
         <div class="col-sm-12 col-md-12 col-lg-6">
@@ -70,11 +68,11 @@
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#clientCarousel" data-bs-slide="prev">
               <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Previous</span>
+              <span class="visually-hidden">Previo</span>
             </button>
             <button class="carousel-control-next" type="button" data-bs-target="#clientCarousel" data-bs-slide="next">
               <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Next</span>
+              <span class="visually-hidden">Siguiente</span>
             </button>
           </div>
         </div>
@@ -111,10 +109,9 @@
         </div>
       </div>
     </section>
-    <section id="faq">FAQ</section>
     <section id="info" class="px-5">
       <h2 class="hero">¿Por qué Seguros Smith?</h2>
-      <div class="container infoContainer py-5">
+      <div class="container infoContainer">
         <div class="row g-5 align-items-end">
           <div class="col col-12 col-lg-4">
             <img src="media/img/info-scooter.webp" class="img-fluid" alt="Foto stock de un Scooter">
@@ -133,9 +130,7 @@
           </div>
         </div>
         <div>
-          <a href="#cotizador">
-            <button class="btn btn-primary btn-lg" type="submit">Cotizar seguro ya</button>
-          </a>
+          <a href="#cotizador" class="btn btn-primary btn-lg">Cotizar seguro ya</a>
         </div>
       </div>
     </section>
