--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
   <meta charset="UTF-8">
@@ -105,7 +105,7 @@
             </div>
             <button class="btn btn-primary btn-lg" id="cotizadorButton" type="submit">Cotizar</button>
           </form>
-          <div class="text-center" id="cotizacion"></div>
+          <div id="cotizacion"></div>
         </div>
       </div>
     </section>
